gcc/testsuite/rust/rustc/ui/parser/issues/issue-112458_dg.rs
fn main() {
    println!("{}", x.); // { dg-error ".E0425." "" { target *-*-* } }
// { dg-error ".E0425." "" { target *-*-* } .-1 }
}

